# hw_2

./: .travis.yml  CMakeLists.txt  README.md  main_shared  main_static
cmake_files/: analysers.cmake  coverage.cmake
lib/: CMakeLists.txt
lib/num_of_char/: CMakeLists.txt
lib/num_of_char/include/: num_of_char.h
lib/num_of_char/src/: num_of_char.c
lib/num_of_char/tests/: CMakeLists.txt
lib/num_of_char/tests/include/: test_lib_funcs.h
lib/num_of_char/tests/src/: test_func.cpp
lib/shared_lib/: CMakeLists.txt
lib/shared_lib/include/: count_series.h
lib/shared_lib/src/: shared_lib.c
lib/shared_lib/tests/: CMakeLists.txt
lib/shared_lib/tests/include/: test_lib_funcs.h
lib/shared_lib/tests/src/: test_func.cpp
lib/static_lib/: CMakeLists.txt
lib/static_lib/include/: count_series.h  get_series.h
lib/static_lib/src/: get_series.c  static_lib.c
lib/static_lib/tests/: CMakeLists.txt
lib/static_lib/tests/include/: test_lib_funcs.h
lib/static_lib/tests/src/: test_func.cpp
src/: main.c
